--- a/youtube clone/index.html
+++ b/youtube clone/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav id="navbar" class="navbar navbar-default">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -37,7 +37,7 @@
         </div>
       </div>
     </nav>
-    <section id="layout" class="container-fluid">
+    <section id="layout" class="container">
       <div class="row">
         <div class="col-md-8">
           <div class="embed-responsive embed-responsive-16by9">
